--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Lynn Zhang</title>
-        <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico">
+        <title>Koen Yi</title>
+        <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700,900|Gilda+Display">
         <link rel="stylesheet" href="node_modules/bulma-start/css/main.css">
