text updates to about page

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <div class="columns">
                 <div class="column is-offset-2">
                     <p class=content>
-                        Hello there! My name is Koen Yi and I am corporate lawyer in Toronto with a passion for
+                        Hello there! My name is Koen Yi and I am lawyer in Toronto with a passion for
                         visual arts. My artistic endeavours are predominately impressionist. I use a variety of
                         media ranging from charcoal to liquid white-out to acrylic paints.
                         <br><br>My long-term goal is to become a mixed-media impressionist artist.
@@ -103,7 +103,7 @@
                                     function is not that of a camera. A great artist expresses in an image
                                     something unobservable in objective reality—the subject perspective of the
                                     artist himself. Impressionism embodies this philosophy perfectly: it is not
-                                    completely divorced from objective reality as the subject matter is of objective
+                                    completely divorced from objective reality as the subject matter is <i>of</i> objective
                                     reality, but it is imputed with the distinctive stylistic elements that depict
                                     the artist’s state of mind.
                                 </div>
@@ -111,13 +111,11 @@
                         </div>
                     </div>
                     <p class=content>
-                        I have been trained in academic sketching for several years prior to graduating secondary
-                        school in 2009. In grade 8, I enrolled in the Byng Arts Mini School, a program dedicated
-                        to development of the fine arts. I won the award for visual arts for my year in grade 9,
-                        and then the same award in the International Baccalaureate program when I transferred in
-                        grade 10. During this time, I also participated in several national visual art contests,
-                        such as the Royal Canadian Legion Art contest. I am currently a hobbyist and enjoy painting
-                        in my spare time.
+                        I have been trained in academic sketching for several years while attending the Byng Arts Mini School,
+                        a secondary school program dedicated to development of the fine arts. While there, I won the award
+                        for visual arts for my cohort and participated in several national visual art contests, such as the
+                        Royal Canadian Legion Art Contest and the RBC Canadian Art Competition. I am currently a hobbyist
+                        and enjoy painting in my spare time. 
                     </p>
                 </div>
                 <div class="column is-2"></div>
