--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             <div class="columns">
                 <div class="column is-offset-2">
                     <p class=content>
-                        Hello there! My name is Koen Yi and I am lawyer in Toronto with a passion for
+                        Hello there! My name is Koen Yi and I am a lawyer in Toronto with a passion for
                         visual arts. My artistic endeavours are predominately impressionist. I use a variety of
                         media ranging from charcoal to liquid white-out to acrylic paints.
                         <br><br>My long-term goal is to become a mixed-media impressionist artist.
@@ -87,7 +87,7 @@
                                     to push objects in the background further into the distance and then oils to
                                     bring attention to the foreground. In this way, further depth can be manufactured
                                     by bringing together the unique offerings of each type of paint. I have
-                                    experimented on the grayscale by using a mix of pencil smudging, liquid white-up
+                                    experimented on the grayscale by using a mix of pencil smudging, liquid white-out
                                     and charcoal.
                                 </div>
                             </div>
@@ -115,7 +115,7 @@
                         a secondary school program dedicated to development of the fine arts. While there, I won the award
                         for visual arts for my cohort and participated in several national visual art contests, such as the
                         Royal Canadian Legion Art Contest and the RBC Canadian Art Competition. I am currently a hobbyist
-                        and enjoy painting in my spare time. 
+                        and enjoy painting in my spare time.
                     </p>
                 </div>
                 <div class="column is-2"></div>
