--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
                                     somewhere in the middle. In other words, while I believe that technical
                                     aestheticism is an inherent metric of art, I also believe that the artist’s
                                     function is not that of a camera. A great artist expresses in an image
-                                    something unobservable in objective reality—the subject perspective of the
+                                    something unobservable in objective reality—the subjective perspective of the
                                     artist himself. Impressionism embodies this philosophy perfectly: it is not
                                     completely divorced from objective reality as the subject matter is <i>of</i> objective
                                     reality, but it is imputed with the distinctive stylistic elements that depict
