update new photo

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="tile is-parent">
                                 <div class="tile is-child">
                                     <figure class="image">
-                                    	<img src="art/Lchina.jpg">
+                                    	<img src="art/Lgirl.jpg">
                                     </figure>
                                 </div>
                             </div>
@@ -112,7 +112,7 @@
                                 <div class="tile is-parent">
                                     <div class="tile is-child">
                                         <figure class="image">
-                                            <img src="art/Lflorence.jpg">
+                                            <img src="art/Lchina.jpg">
                                         </figure>
                                     </div>
                                 </div>
@@ -178,7 +178,7 @@
                             <div class="tile is-parent">
                                 <div class="tile is-child">
                                     <figure class="image">
-                                    	<img src="art/Ltrees.jpg">
+                                    	<img src="art/Lbruges.jpg">
                                     </figure>
                                 </div>
                             </div>
@@ -228,17 +228,15 @@
                         </div>
                     </div>
                     <div class="tile">
-                        <div class="tile is-parent">
+                        <div class="tile is-parent is-vertical">
                             <div class="tile is-child">
                                 <figure class="image">
                                     <img src="art/Lwindy.jpg">
                                 </figure>
                             </div>
-                        </div>
-                        <div class="tile is-parent">
                             <div class="tile is-child">
                                 <figure class="image">
-                                    <img src="art/Lwomanumbrella.jpg">
+                                    <img src="art/Ltrees.jpg">
                                 </figure>
                             </div>
                         </div>
@@ -246,6 +244,13 @@
                             <div class="tile is-child">
                                 <figure class="image">
                                     <img src="art/Pwomansmoke.jpg">
+                                </figure>
+                            </div>
+                        </div>
+                        <div class="tile is-parent">
+                            <div class="tile is-child">
+                                <figure class="image">
+                                    <img src="art/Lwomanumbrella.jpg">
                                 </figure>
                             </div>
                         </div>
